# aoc2022

./: Cargo.toml  README.md
src/: err.rs  io.rs  lib.rs  rock_paper_scissors.rs
src/days/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
