[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.*"
regex = "1.7.*"
nalgebra = "0.31.*"
ndarray = "0.15.*"
property = "0.3.*"
rayon = "1.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[lib]